[package]
name = "http-connection"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]

[dependencies]
http = "0.1"
tokio-tcp = { version = "0.1", optional = true }
tokio-rustls = { version = "0.9", optional = true }

[features]
default = ["tcp"]
tcp = ["tokio-tcp"]
rustls = ["tokio-rustls"]
