[package]
name = "http-connection"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
readme = "README.md"
documentation = "https://docs.rs/http-connection/0.1.0/http-connection"
homepage = "https://github.com/hyperium/http-connection"
license = "MIT"
description = """
Trait representing HTTP connections.
"""
keywords = ["http"]
categories = ["web-programming"]

[dependencies]
http = "0.1"
tokio-tcp = { version = "0.1", optional = true }

[features]
default = ["tcp"]
tcp = ["tokio-tcp"]